api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: backend
  template: 
    metadata: 
      labels:
        components: backend
    spec:
      containers:
        - name: short-api
          image: antonlarichev/short-app
          ports:
            - containerPort: 3000          
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
