app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip
spec:
  type: ClusterIP
  selector:
    components: frontend
  ports:
    - protocol: TCP
      port: 80
